--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "pdf-parse": "^2.4.5"
   }
 }
