--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "dotenv": "^17.2.3",
     "pdf-parse": "^2.4.5"
   }
