--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "bun run src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/chroma-js": "^3.1.2"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "@xenova/transformers": "^2.17.2",
+    "chromadb": "^3.2.2",
     "dotenv": "^17.2.3",
     "pdf-parse": "^2.4.5"
   }
